# gsc

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
gsc/: auth.py  cli.py  client.py  reset_exercise.py  setup_exercise.py  verifier.py
gsc/exercises/: amend.py  merge_conflict.py  multiple_remotes.py  my_first_commit.py  push_and_pull.py  reset_file.py  revert.py  ssh_clone.py  sync_error.py  use_the_force.py  utils.py
tests/: test_gsc.py
