[tool.poetry]
name = "gsc"
version = "0.0.1"
description = ""
authors = ["Daniel Tipping <daniel@oldreliable.tech>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = {version = "^0.770", python = ">=3.6,<3.8"}
pytype = {version = "^2020.4.1", python = ">=3.6,<3.8"}

[tool.poetry.scripts]
gsc = "gsc.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
