[tool.poetry]
name = "gsc"
version = "3.0.0"
description = "Git for Scientists practical exercise helper."
authors = ["Daniel Tipping <daniel@gitscientist.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://www.gitscientist.com"
repository = "https://github.com/git-scientist/gsc"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.1.1"
asyncio = "^3.4.3"
websockets = "^10"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.8"
pytype = {version = "^2020.4.1", python = ">=3.6,<3.8"}
types-requests = "^2.31.0.20240106"

[tool.poetry.scripts]
gsc = "gsc.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
